--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="server_off_invisible">Your device is not visible in the network!</string>
 
     <string name="network_manager">Network manager</string>
+    <string name="file_manager">File manager</string>
+
+
     <string name="scanning_network">Scanning network</string>
     <string name="found_devices">Found devices</string>
 
