file manager fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
 
     <string name="network_manager">Network manager</string>
     <string name="file_manager">File manager</string>
+    <string name="empty_folder">Folder is empty</string>
 
 
     <string name="scanning_network">Scanning network</string>
