--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,9 +25,14 @@
     <string name="delete">Delete</string>
     <string name="rename">Rename</string>
     <string name="add_to_favorite">Add to Favorite</string>
+
     <string name="directory">Directory: </string>
     <string name="name">Name: </string>
-    <string name="creation_date">Date of creation: </string>
+    <string name="creation_date">Last modified date: </string>
+    <string name="size">Size: </string>
+
+    <string name="text_file">file</string>
+    <string name="text_files">files</string>
 
 
 
