--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,7 +6,7 @@
     <string name="network_manager">Network manager</string>
     <string name="file_manager">File manager</string>
     <string name="empty_folder">Folder is empty</string>
-    <string name="scanning_network">Scanning network</string>
+    <string name="scanning_network">Scan network</string>
     <string name="found_devices">Found devices</string>
     <string name="no_devices">No devices</string>
     <string name="file_info">File info</string>
@@ -21,4 +21,15 @@
     <string name="sure_delete">Are you sure want to delete this file?</string>
     <string name="file_deleted">File successfully deleted!</string>
     <string name="file_not_deleted">The file could not be deleted!</string>
+    <string name="size">Size:</string>
+    <string name="rename_successful">The file was renamed successfully</string>
+    <string name="rename_not_successful">The file was not renamed</string>
+    <string name="selected_files_num">Selected files: %1$d</string>
+    <string name="text_file">file</string>
+    <string name="text_files">files</string>
+    <string name="мisibility">Visibility</string>
+    <string name="favorite_files">Favorite files</string>
+    <string name="files">Files</string>
+    <string name="network">Network</string>
+    <string name="favorite">Favorite</string>
 </resources>
