--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,7 +3,6 @@
     <string name="app_name">ClientWebSocketApp</string>
     <string name="name">"Имя: "</string>
     <string name="directory">"Директория: "</string>
-    <string name="add_to_favorite">Добавить в Избранное</string>
     <string name="rename">Переименовать</string>
     <string name="delete">Удалить</string>
     <string name="file_info">Информация файла</string>
@@ -27,9 +26,11 @@
     <string name="selected_files_num">Выбранные файлы: %1$d</string>
     <string name="text_file">файл</string>
     <string name="text_files">файлы</string>
-    <string name="мisibility">Видимость</string>
     <string name="favorite_files">Избранные файлы</string>
     <string name="favorite">Избранные</string>
     <string name="network">Сеть</string>
     <string name="files">Файлы</string>
+    <string name="favorites_remove">Убрать с Избранных</string>
+    <string name="favorites_add">Добавить в Избранные</string>
+    <string name="visibility">Видимость в сети</string>
 </resources>
