--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,9 @@
     <string name="file_info">File info</string>
     <string name="delete">Delete</string>
     <string name="rename">Rename</string>
-    <string name="add_to_favorite">Add to Favorite</string>
+
+    <string name="favorites_add">Add to Favorites</string>
+    <string name="favorites_remove">Remove from Favorites</string>
 
     <string name="directory">Directory: </string>
     <string name="name">Name: </string>
@@ -46,7 +48,7 @@
 
     <!--selected files-->
     <string name="selected_files_num">Selected files: %1$d</string>
-    <string name="visibility">Visibility</string>
+    <string name="visibility">Visibility in the network</string>
 
 
     //title
