--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,5 +55,6 @@
     <string name="favorite">Favorite</string>
     <string name="network">Network</string>
     <string name="files">Files</string>
+    <string name="select_device">Select a device to send</string>
 
 </resources>
