--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -33,5 +33,5 @@
     <string name="favorites_remove">Remove from Favorites</string>
     <string name="favorites_add">Add to Favorites</string>
     <string name="visibility">Visibility in the network</string>
-    <string name="select_device">Select a device to send</string>
+    <string name="select_device">Select a device</string>
 </resources>
