--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -33,4 +33,5 @@
     <string name="favorites_add">Добавить в Избранные</string>
     <string name="visibility">Видимость в сети</string>
     <string name="select_device">Выберите устройство</string>
+    <string name="devices">Устройства</string>
 </resources>
