--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -34,4 +34,5 @@
     <string name="visibility">Visibility in the network</string>
     <string name="select_device">Select a device</string>
     <string name="devices">Devices</string>
+    <string name="send">Send</string>
 </resources>
