--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,6 @@
     <string name="files">Files</string>
     <string name="select_device">Select a device</string>
     <string name="devices">Devices</string>
+    <string name="send">Send</string>
 
 </resources>
