--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,8 @@
     <string name="select_device">Select a device</string>
     <string name="devices">Devices</string>
     <string name="send">Send</string>
+    <string name="permission_title">Permission to transfer data</string>
+    <string name="accept">Accept</string>
+    <string name="cancel">Cancel</string>
 
 </resources>
